Fixing styling overflow issue and margin on project

--- a/src/styles/Project.css
+++ b/src/styles/Project.css
@@ -43,6 +43,7 @@
   aspect-ratio: preserve;
   font-family: "Lexend", sans-serif;
   margin-bottom: 2rem;
+
 }
 
 .center-carousel {
@@ -62,7 +63,7 @@
   align-items: center;
   justify-content: center;
   aspect-ratio: preserve;
-  margin-bottom: 2rem;
+  padding-bottom: 2rem;
   margin-top: 2rem;
   position: relative;
   height: 80vh;
@@ -134,8 +135,8 @@
   border-bottom-right-radius: 0;
   border: 2px solid rgb(221, 255, 221);
   min-height: 300px;
+  margin: 20px;
 }
-
 
 
 .project-section > h2 {
